# satsolver

./: LICENSE  README.md  satsolve.cabal  satsolver.cabal  solver.cabal
lib/: Logic.hs  Parser.hs  Solver.hs  Types.hs
lib/Logic/: Parser.hs  Pretty.hs  Proofs.hs  Solver.hs
src/: Main.hs  Parser.hs  Solver.hs
tests/: TestParser.hs  TestSolver.hs
