cabal-version:      3.0
name:               satsolve
version:            0.1.0.0
-- synopsis:
-- description:
-- license:            GPL-3
license-file:       LICENSE
author:             Liam van der Vyver
maintainer:         91105007+liamvdvyver@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Solver, Parser
    other-modules:    Types
    -- other-extensions:
    build-depends:    base >=4.16.4.0, containers
    hs-source-dirs:   lib
    default-language: Haskell2010


executable satsolve
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.16.4.0, satsolve
    hs-source-dirs:   src
    default-language: Haskell2010
