cabal-version:      3.0
name:               solver
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Liam van der Vyver
maintainer:         91105007+liamvdvyver@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Solver, Parser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010
